# bridgeorm

./: .gitignore  Cargo.toml  README.md  Readme.md  Rules.md  acceptance_test.py  deny.toml  pyproject.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0001_arrow_integration_results.json
.github/workflows/: build_and_release.yml  release.yml
benches/: baseline_bench.rs  marshalling_bench.rs
bridge/admin/: auth.py  csrf.py  panel.py  ratelimit.py  views.py
bridge/cli/: cli.py
bridge/core/: base.py
bridge/schema/: introspect.py
bridge_orm/: __init__.py  base.py  cli.py  exceptions.py  hooks.py  models.py  query.py  relations.py  telemetry_setup.py  transaction.py
bridge_orm/admin/: __init__.py  auth.py  panel.py  views.py
bridge_orm/api/: __init__.py  generate.py
bridge_orm/cli/: cli.py
bridge_orm/common/: __init__.py  exceptions.py
bridge_orm/core/: __init__.py  base.py  hooks.py  lazy.py  proxy.py  query.py  relations.py  session.py  transaction.py
bridge_orm/ecosystem/: factory_boy.py  pytest_plugin.py
bridge_orm/schema/: __init__.py  differ.py  introspect.py  migrations.py  snapshot.py
docs/: ARCHITECTURE_AND_COMPARISON.md  README.md  UI_SPECIFICATION.md  architecture.md  concurrency.md  deployment.md  query_builder.md  security.md
documents/: ARCHITECTURE_AND_COMPARISON.md  BRIDGEORM_SECURITY.md  UI_SPECIFICATION.md  USER_MANUAL.md
examples/: advanced_relations.py  python_style.py  quick_check.py  typescript_style.py  v2_features.py
examples/demos/: complex_java.java  complex_python.py  complex_ts.ts
experimental/java_orm/src/main/kotlin/io/bridgeorm/core/: BridgeORM.kt
lang/java_orm/src/main/java/io/bridgeorm/core/: BridgeORM.java
scripts/: bridge_manager.sh
src/: db.rs  error.rs  introspect.rs  java_api.rs  lib.rs  loader.rs  logger.rs  models.rs  relations.rs  transaction.rs
src/engine/: arrow.rs  circuit_breaker.rs  db.rs  dirty_tracker.rs  hydrator.rs  loader.rs  metadata.rs  mod.rs  models.rs  pool_manager.rs  query.rs  relations.rs  session.rs  transaction.rs
src/engine/identity_map/: mod.rs  shared_identity_map.rs
src/engine/loading/: batch_relation_loader.rs  mod.rs  strategy.rs
src/engine/mutation/: mod.rs  version_guarded_updater.rs
src/ffi/: java.rs  mod.rs  pool_config.rs  type_coercion.rs
src/schema/: introspect.rs
src/telemetry/: init.rs  logger.rs  mod.rs
tests/python/: test_async_core.py
tests/python/integration/: acceptance_test.py  test_benchmarks.py  test_identity_map.py  test_migrations.py  test_observability.py  test_production_features.py
tools/: schema_designer.py
