[package]
name = "bridge_orm"
version = "0.1.0"
edition = "2021"

[lib]
name = "bridge_orm_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.21", features = ["extension-module"] }
sqlx       = { version = "0.7",  features = [
                 "runtime-tokio-rustls", "postgres", "sqlite",
                 "uuid", "chrono", "json"
               ] }
tokio      = { version = "1",    features = ["full"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
once_cell  = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = "0.3"
regex = "1"
