[package]
name = "bridge_orm"
version = "0.1.0"
edition = "2021"

[lib]
name = "bridge_orm"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3       = { version = "0.21", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.21", features = ["tokio-runtime"] }
sqlx       = { version = "0.7",  features = [
                 "runtime-tokio-rustls", "postgres", "sqlite", "mysql",
                 "any", "uuid", "chrono", "json"
               ] }
tokio      = { version = "1",    features = ["full"] }
futures    = "0.3"
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
once_cell  = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "tls-roots"] }
opentelemetry-semantic-conventions = "0.15"
opentelemetry-http = "0.12"
http = "1.1"
regex = "1"
thiserror = "1.0"
dashmap = "5"

[dependencies.jni]
version = "0.21"
optional = true

[dependencies.arrow]
version = "58"
optional = true

[dependencies.arrow-ipc]
version = "58"
optional = true

[features]
default = []
data-science = ["arrow", "arrow-ipc"]
java-interop = ["jni"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "marshalling_bench"
harness = false

[[bench]]
name = "baseline_bench"
harness = false
