[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bridge_orm"
version = "0.1.0"
description = "Secure By Default"
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0; python_version < '3.11'",
    "pyarrow>=15.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bridge_orm_rs"

[tool.ruff]
select = ["E", "F", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
files = ["bridge_orm", "tests"]
